test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/4_parameter/PACKAGE_NAME_COLLIDE_PARENT.t
@static_test { expect_message={ level="LEVEL_ERROR", id="PACKAGE_NAME_COLLIDE_PARENT", parameters={ package_id="QWE" } } }
package QWE.QWE;
